# Raspberry-Pi

./: GPIO5__init.py  LICENSE  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens-MX-OLED.py  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens-MX.py  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens.py  Pico-BodenfeuchteUeberwachung-doubleDigit.py  Pico-BodenfeuchteUeberwachung.py  Pico-Demonstration-SIO.py  README.md  RasPi-AutomatischeBewaesserungBeispiel1.py  RasPi-AutomatischeBewässerungBeispiel1.py  RasPi-LCD-WeatherStation.py  RasPi-ManuelleBewaesserungBeispiel1.py  RasPi-ManuelleBewaesserungBeispiel2.py  RasPi-SensorLongTermMeasurement.py  RasPi-mqtt_test.py  Sensor-LongTermMeasurement.py  mqttTest  schattenspeicher.py  umrechnung.py  wateringManual
Project-1/: AutomatischeBewaesserung-Beispiel1.py  AutomatischeBewaesserung-Beispiel2.py  GPIO5__init.py  Langzeitmessung-ME110.py  ManuelleBewaesserung-Beispiel1.py  README.md  RasPi-AutomatischeBewaesserung-Beispiel1.py  RasPi-ManuelleBewaesserung-Beispiel1.py  RasPi-ManuelleBewaesserung-Beispiel2.py  RasPi-RSensor-LongTermMeasurement.py  umrechnung.py  watering  wateringManual
Project-2/: BodenfeuchteUeberwachung.py  Interpolation-103AT2-V2.xlsx  Interpolation-103AT2.xlsx  IoT_Pico--HW390-GP26--103AT2-GP27.c  IoT_Pico-ME110.c  MoistureMeasurement--RGB-LED.py  MoistureMeasurement-CSens-RSens-OLED.py  MoistureMeasurement-CSens-RSens.py  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens-MX-OLED.py  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens-MX.py  Pico-BodenfeuchteUeberwachung-doubleDigit-CSens-RSens.py  Pico-BodenfeuchteUeberwachung-doubleDigit.py  Pico-Demonstration-SIO.c  Pico-Demonstration-SIO.py  Pico-Demonstration-SIO.uf2  README.md  SD-Card.py  SIO-Demo--long.c  SIO-demo--concise.c  SIO-demo.c  SIO-demo.py  SIO-demo.uf2  UART-debug.py  obsolete--SIO-demo.py  sdcard-test.py  sdcard.py
Project-3/: MQTT-test.py  README.md  RasPi-LCD-WeatherStation.py  RasPi-mqtt_test.py  WeatherStation.py
Project-4/: CMakeLists.txt  PWM-GPIO0-Demo.uf2  PWM-GPIO25-Demo.uf2  README.md  Readme.md  bmp280.c  bmp280.uf2  ledTest.py  lookupTable.h  motorTaster.py  motorTest.py  oled.h  taster_gpio_irq.c  taster_gpio_irq.uf2  xmas-light.py
Project-4/motor-test/: CMakeLists.txt  ocd-flash.sh  pwm--motor-test.c  pwm--motor-test.elf  pwm--motor-test.uf2
Project-4/xmas-light/: xmas-light.py
Project-5/: CMakeLists.txt  IoT-Pico--HIH4020-GP26-103AT2-GP27-SFH300-GP28.uf2  IoT-test--withoutPW.c  IoT_Pico--HIH4020-GP26--103AT2-GP27--SFH300-GP28.c  IoT_Pico--HIH4020-GP26--103AT2-GP27--SFH300-GP28.uf2  IoT_Pico--HIH4020-GP26--103AT2-GP27.c  IoT_Pico--HIH4020-GP26-103AT2-GP27-SFH300-GP28.c  Pico-LuftfeuchteUeberwachung-doubleDigit-MX.py  README.md  RH-measurement--tempComp.py  RH-measurement.py  temperatureCompensation.xlsx
Project-5/V2.00/: CMakeLists.txt  HIH4020-humidityMeasurement.c  HIH4020-humidityMeasurement.elf  HIH4020-humidityMeasurement.uf2
Project-5/V2.10/: HIH4020-humidityMeasurement.c
Project-6/: CPMinfo.php  HV-generation.py  IoT-test--withoutPW.c  PWM.py  README.md  buildC  connections.h  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2  geigerPWM.c  geigerPWM.uf2  geigerPWM_LCD_Pulse-Time.c  geigerPWM_LEDGP8GP9GP25_IRQGP17.c  geigerPWM_LEDGP8GP9GP25_IRQGP17_disPulls.c  geigerPWM_LEDGP8GP9GP25_IRQGP17_disPulls.uf2  geigerPWM_triggeringLCD_absoluteTime.c  geigerPWM_triggeringLCD_absoluteTime.uf2  geigerPWM_triggeringLED.c  geigerPWM_triggeringLED.uf2  geigerPWM_triggeringLED_variantA.c  geigerPWM_triggeringLED_variantA.uf2  geigerPWM_triggeringLED_variantB.c  geigerPWM_userLED.c  geigerPWM_userLED.uf2  geigerPWM_userLED_IRQGP01.c  geigerPWM_userLED_IRQGP17.uf2  pico_sdk_import.cmake
Project-6/V2.08/: connections.h  geigerCounter.c
Project-6/V3.93/: geigerCounter.c  geigerCounter.elf  geigerCounter.uf2  oled.h
Project-6/V4.18/: geigerCounter.c  geigerCounter.elf
Project-6/V__1_23/: connections.h  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_01/: CMakeLists.txt  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_02/: connections.h  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_03/: CMakeLists.txt  connections.h  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_04/: geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_05/: connections.h  geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_06/: geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_07/: geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__2_08/: geigerCounter.c  geigerCounter.elf  geigerCounter.uf2
Project-6/V__3_00/: geigerCounter.uf2
Project-6/V__3_02/: connections.h  geigerCounter.elf  geigerCounter.uf2
Project-6/V__3_10/: connections.h  geigerCounter.c  lookupTable.h  (+2 more)
Project-7/: CMakeLists.txt  DAC_MCP23016.c  DAC_MCP23016.elf  DAC_MCP23016.uf2  README.md  pir_sensor_gpio_irq.c  pir_sensor_gpio_irq.uf2
Project-8/: CMakeLists.txt  README.md  Readme.md  TSL25911-ambient-light-measurement.c  TSL25911-ambient-light-measurement.elf  TSL25911-ambient-light-measurement.uf2  connections.h  doubleBlinky.c  doubleBlinky.elf  doubleBlinky.pio  doubleBlinky.uf2  pio.c  pio.uf2  sqwave.pio
Project-9/: CMakeLists.txt  README.md  hello-XOSC.c  hello-XOSC.elf  hello-XOSC.uf2
Project10/: README.md  coordinates_converted-modified--OLED--Geiger.py  coordinates_converted-modified--OLED.py  coordinates_converted-modified--sd-card.py  sdcard.py
Project11/: CMakeLists.txt  Readme.md  connections.h  lookupTable.h  oled.h  thermal-imaging.c  thermal-imaging.elf  thermal-imaging.uf2
Project11/V0.26/: CMakeLists.txt  connections.h  lookupTable.h  thermal-imaging.c  thermal-imaging.elf  thermal-imaging.uf2
Project11/V0.41/: CMakeLists.txt  lookupTable.h  thermal-imaging.c  thermal-imaging.elf  thermal-imaging.uf2
shell-scripts/: mqttTest  wateringAutomatic  wateringManual
(+247 files in other folders)
